--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "reproduce-sass-var-loader",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "Francisco Lourenco <aristidesfl@gmail.com>",
-  "license": "MIT"
+  "private": true,
+  "workspaces": {
+    "packages": ["packages/*"]
+  }
 }
